Agregando texto al html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Example</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus delectus iusto temporibus, minima accusamus odio nulla facilis? Dolorem voluptatibus iusto nisi quibusdam, modi autem alias, quidem repudiandae corrupti illo impedit!</p>
 </body>
 </html>
